Initial implementation completed, without testing

--- a/free_fleet_rmf_adapter/CMakeLists.txt
+++ b/free_fleet_rmf_adapter/CMakeLists.txt
@@ -16,29 +16,35 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(free_fleet REQUIRED)
+find_package(rmf_traffic REQUIRED)
+find_package(rmf_task_msgs REQUIRED)
+find_package(rmf_traffic_ros2 REQUIRED)
 find_package(rmf_fleet_adapter REQUIRED)
 
 #===============================================================================
 
 add_executable(free_fleet_rmf_adapter
   src/main.cpp
+  src/utilities.cpp
+  src/Parameters.cpp
   src/RobotCommand.cpp
   src/RmfFrameTransformer.cpp
-  # src/FleetAdapter.cpp
 )
 target_include_directories(free_fleet_rmf_adapter
   PRIVATE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
-    ${free_fleet_INCLUDE_DIRS}
     ${rclcpp_INCLUDE_DIRS}
+    ${rmf_task_msgs_INCLUDE_DIRS}
 )
 target_link_libraries(free_fleet_rmf_adapter
   PRIVATE
-    ${free_fleet_LIBRARIES}
     ${rclcpp_LIBRARIES}
-
-    rmf_fleet_adapter
+    ${rmf_task_msgs_LIBRARIES}
     Eigen3::Eigen
+    free_fleet::free_fleet
+    rmf_traffic::rmf_traffic
+    rmf_traffic_ros2::rmf_traffic_ros2
+    rmf_fleet_adapter::rmf_fleet_adapter
 )
 
 #===============================================================================
