--- a/free_fleet_examples/package.xml
+++ b/free_fleet_examples/package.xml
@@ -12,6 +12,10 @@
   <exec_depend>rclpy</exec_depend>
   <exec_depend>rmf_fleet_msgs</exec_depend>
   <exec_depend>free_fleet_server</exec_depend>
+  <buildtool_depend>building_map_tools</buildtool_depend>
+  <buildtool_depend>ros2run</buildtool_depend>
+
+  <exec_depend>turtlebot3_gazebo</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
