--- a/free_fleet_client/package.xml
+++ b/free_fleet_client/package.xml
@@ -14,6 +14,7 @@
   <depend>rclcpp_action</depend>
   <depend>nav2_msgs</depend>
   <depend>free_fleet</depend>
+  <depend>tf2_ros</depend>
   
   <test_depend>ament_lint_common</test_depend>
 
