Client factory function created
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/free_fleet_cyclonedds/CMakeLists.txt
+++ b/free_fleet_cyclonedds/CMakeLists.txt
@@ -28,7 +28,7 @@ endif()
 file(GLOB lib_srcs
   "src/messages/*.c"
   "src/messages/*.cpp"
-  # "src/*.cpp"
+  "src/*.cpp"
 )
 
 add_library(free_fleet_cyclonedds SHARED
