Basic client server tests
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/free_fleet_cyclonedds/CMakeLists.txt
+++ b/free_fleet_cyclonedds/CMakeLists.txt
@@ -52,6 +52,8 @@ set(tests
   test_sub
   test_pub_transient_local
   test_sub_transient_local
+  test_client
+  test_server
 )
 foreach(test_target ${tests})
   add_executable(${test_target}
