--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,90 +1,78 @@
 name: build
-on: push
+on: [push, pull_request]
 jobs:
 
   ros1:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     container:
-      image: docker://ros:melodic-ros-base-bionic
+      image: docker://ros:noetic-ros-base-focal
     steps:
-    - name: deps
+    - name: non-ros-deps
       run: |
         sudo apt update && sudo apt install \
           git wget \
-          python-rosdep \
-          python-catkin-tools \
+          python3-rosdep \
           python3-vcstool \
           python3-colcon-common-extensions \
           maven default-jdk -y
     - name: workspace
-      shell: bash
       run: |
-        mkdir -p /home/ros1_ws/src
-        cd /home/ros1_ws
-        wget https://raw.githubusercontent.com/osrf/free_fleet/${GITHUB_REF:11}/ros1.repos
-        vcs import src < ros1.repos
+        mkdir -p ros1_ws/src
+        cd ros1_ws/src
+        git clone https://github.com/osrf/free_fleet
+        git clone https://github.com/osrf/rmf_core
+        git clone https://github.com/eclipse-cyclonedds/cyclonedds
     - name: checkout
-      shell: bash
+      uses: actions/checkout@v2
+      with:
+        path: ros1_ws/src/free_fleet
+    - name: ros-deps
       run: |
-        cd /home/ros1_ws/src/free_fleet
-        git checkout "${GITHUB_REF:11}"
-    - name: rosdeps
-      shell: bash
-      run: |
-        cd /home/ros1_ws
+        cd ros1_ws
         rosdep update
-        source /opt/ros/melodic/setup.bash
-        rosdep install --from-paths src --ignore-src -y -r --skip-keys="rmf_fleet_msgs ament_lint_common rclpy rclcpp rosidl_default_generators ament_cmake builtin_interfaces"
+        rosdep install --from-paths src --ignore-src --rosdistro noetic -yr
     - name: build
       shell: bash
       run: |
-        cd /home/ros1_ws
-        source /opt/ros/melodic/setup.bash
-        catkin build \
-          free_fleet \
-          ff_examples_ros1 \
-          ff_rviz_plugins_ros1 \
-          free_fleet_client_ros1
+        cd ros1_ws
+        source /opt/ros/noetic/setup.bash
+        colcon build \
+          --cmake-args -DCMAKE_BUILD_TYPE=RELEASE \
+          --packages-ignore ament_cmake_catch2 rmf_cmake_uncrustify \
+          --packages-up-to free_fleet free_fleet_cyclonedds
 
   ros2:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     container:
-      image: docker://ros:eloquent-ros-base-bionic
+      image: docker://ros:foxy-ros-base-bionic
     steps:
-    - name: deps
+    - name: non-ros-deps
       run: |
         sudo apt update && sudo apt install \
           git wget \
-          python-rosdep \
-          python-catkin-tools \
+          python3-rosdep \
           python3-vcstool \
-          python3-colcon-common-extensions \
-          maven default-jdk -y
+          python3-colcon-common-extensions
     - name: workspace
-      shell: bash
       run: |
-        mkdir -p /home/ros2_ws/src
-        cd /home/ros2_ws
-        wget https://raw.githubusercontent.com/osrf/free_fleet/${GITHUB_REF:11}/ros2.repos
-        vcs import src < ros2.repos
+        mkdir -p ros2_ws/src
+        cd ros2_ws/src
+        git clone https://github.com/osrf/free_fleet
+        git clone https://github.com/osrf/rmf_core
     - name: checkout
-      shell: bash
+      uses: actions/checkout@v2
+      with:
+        path: ros2_ws/src/free_fleet
+    - name: ros-deps
       run: |
-        cd /home/ros2_ws/src/free_fleet
-        git checkout "${GITHUB_REF:11}"
-    - name: rosdeps
-      shell: bash
-      run: |
-        cd /home/ros2_ws
+        cd ros2_ws
         rosdep update
-        source /opt/ros/eloquent/setup.bash
-        rosdep install --from-paths src --ignore-src -y -r --skip-keys="actionlib tf roscpp rviz catkin map_server turtlebot3_navigation turtlebot3_bringup turtlebot3_gazebo move_base amcl"
+        rosdep install --from-paths src --ignore-src --rosdistro foxy -yr
     - name: build
       shell: bash
       run: |
-        cd /home/ros2_ws
-        source /opt/ros/eloquent/setup.bash
-        colcon build --packages-up-to \
-          free_fleet \
-          ff_examples_ros2 \
-          free_fleet_server_ros2
+        cd ros2_ws
+        source /opt/ros/foxy/setup.bash
+        colcon build \
+          --cmake-args -DCMAKE_BUILD_TYPE=RELEASe \
+          --packages-up-to free_fleet free_fleet_cyclonedds
