--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,7 +52,7 @@ jobs:
           git wget \
           python3-rosdep \
           python3-vcstool \
-          python3-colcon-common-extensions
+          python3-colcon-common-extensions -y
     - name: workspace
       run: |
         mkdir -p ros2_ws/src
