Added tests for free_fleet, makeClient
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/free_fleet/cmake/free_fleet-config.cmake.in
+++ b/free_fleet/cmake/free_fleet-config.cmake.in
@@ -6,6 +6,8 @@ include(CMakeFindDependencyMacro)
 
 find_dependency(rmf_utils REQUIRED)
 find_dependency(rmf_traffic REQUIRED)
+find_dependency(Eigen3 REQUIRED)
+find_dependency(Threads REQUIRED)
 
 if(NOT TARGET free_fleet::free_fleet)
     include("${free_fleet_CMAKE_DIR}/free_fleet-targets.cmake")
