--- a/free_fleet/CMakeLists.txt
+++ b/free_fleet/CMakeLists.txt
@@ -20,6 +20,7 @@ include(GNUInstallDirs)
 find_package(rmf_utils REQUIRED)
 find_package(rmf_traffic REQUIRED)
 find_package(Eigen3 REQUIRED)
+find_package(Threads REQUIRED)
 
 file(GLOB lib_srcs
   "src/*.cpp"
@@ -33,6 +34,7 @@ add_library(free_fleet SHARED
 target_link_libraries(free_fleet
   rmf_traffic::rmf_traffic
   rmf_utils::rmf_utils
+  Threads::Threads
 )
 
 target_include_directories(free_fleet
@@ -40,6 +42,34 @@ target_include_directories(free_fleet
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
+
+# Tests
+find_package(ament_cmake_catch2 QUIET)
+find_package(rmf_cmake_uncrustify QUIET)
+if (BUILD_TESTING AND ament_cmake_catch2_FOUND AND rmf_cmake_uncrustify_FOUND)
+  file(GLOB_RECURSE unit_test_srcs "test/*.cpp")
+
+  ament_add_catch2(
+    test_free_fleet test/main.cpp ${unit_test_srcs}
+    TIMEOUT 300)
+  target_link_libraries(test_free_fleet
+    free_fleet
+    rmf_utils::rmf_utils
+    rmf_traffic::rmf_traffic
+  )
+  target_include_directories(test_free_fleet
+    PRIVATE
+      $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/>
+  )
+
+  find_file(uncrustify_config_file NAMES "share/format/rmf_code_style.cfg")
+
+  rmf_uncrustify(
+    ARGN include src test
+    CONFIG_FILE ${uncrustify_config_file}
+    MAX_LINE_LENGTH 80
+  )
+endif()
 
 # Create cmake config files
 include(CMakePackageConfigHelpers)
