--- a/free_fleet/package.xml
+++ b/free_fleet/package.xml
@@ -9,8 +9,10 @@
   
   <depend>rmf_utils</depend>
   <depend>rmf_traffic</depend>
-
   <depend>eigen</depend>
+
+  <test_depend>ament_cmake_catch2</test_depend>
+  <test_depend>rmf_cmake_uncrustify</test_depend>
 
   <export>
     <build_type>cmake</build_type>
