--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,7 @@ jobs:
           --from-paths src \
           --ignore-src \
           --rosdistro noetic \
-          --skip-keys "turtlebot3_bringup turtlebot3_navigation"
+          --skip-keys "turtlebot3_bringup turtlebot3_navigation turtlebot3_gazebo rmf_fleet_msgs ament_lint_common"
           -r -y
     - name: build
       shell: bash
