--- a/free_fleet_client/package.xml
+++ b/free_fleet_client/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>free_fleet_client_ros1</name>
+  <name>free_fleet_client</name>
   <version>1.0.0</version>
   <description>Free Fleet client ROS 1 wrapper</description>
   <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
