--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,5 +44,5 @@ jobs:
           --packages-up-to \
           free_fleet \
           free_fleet_client \
-          free_fleet_rviz_plugins \
-          ff_examples_ros1
+          free_fleet_examples \
+          free_fleet_rviz_plugins
