Ros1 rename packages (#61)
* Renamed client package and modified build test package name

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Rename plugins package, modified built test package name

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Missing changes for plugin package, header guards and changelog package name

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Missing changes to client package, header guards, printouts

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Changed example package name, modified build test package name, changed dependency names for previously changed names

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,6 +43,6 @@ jobs:
           --cmake-args -DCMAKE_BUILD_TYPE=RELEASE \
           --packages-up-to \
           free_fleet \
-          ff_examples_ros1 \
-          ff_rviz_plugins_ros1 \
-          free_fleet_client_ros1
+          free_fleet_client \
+          free_fleet_examples \
+          free_fleet_rviz_plugins
