Changed examples package name, modified built test package name
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,4 +44,4 @@ jobs:
           --packages-up-to \
           free_fleet \
           free_fleet_server \
-          ff_examples_ros2
+          free_fleet_examples
