--- a/free_fleet_examples/package.xml
+++ b/free_fleet_examples/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ff_examples_ros2</name>
+  <name>free_fleet_examples</name>
   <version>1.0.0</version>
   <description>A package containing some examples of using free fleet ROS 2 components</description>
   <maintainer email="aaron@openrobotics.org">Aaron</maintainer>
@@ -9,7 +9,7 @@
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>rmf_fleet_msgs</exec_depend>
-  <exec_depend>free_fleet_server_ros2</exec_depend>
+  <exec_depend>free_fleet_server</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
