Ros2 dev name changes (#63)
* Changed name for server package, modified built test package name

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Changed examples package name, modified built test package name

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,5 +43,5 @@ jobs:
           --cmake-args -DCMAKE_BUILD_TYPE=RELEASE \
           --packages-up-to \
           free_fleet \
-          ff_examples_ros2 \
-          free_fleet_server_ros2
+          free_fleet_server \
+          free_fleet_examples
