--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,5 +43,4 @@ jobs:
           --cmake-args -DCMAKE_BUILD_TYPE=RELEASE \
           --packages-up-to \
           free_fleet \
-          free_fleet_server \
-          free_fleet_examples
+          free_fleet_server
