--- a/free_fleet/CMakeLists.txt
+++ b/free_fleet/CMakeLists.txt
@@ -6,12 +6,18 @@ if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
 endif()
 
-# if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-#   add_compile_options(-Wall -Wextra -Wpedantic)
-# endif()
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
+if(NOT CMAKE_BUILD_TYPE)
+  # Use the Release build type by default if the user has not specified one
+  set(CMAKE_BUILD_TYPE Release)
+endif()
 
 include(GNUInstallDirs)
 
+find_package(ament_cmake REQUIRED)
 find_package(CycloneDDS QUIET CONFIG)
 if(NOT CycloneDDS_FOUND)
   message(WARNING "Could not find Eclipse Cyclone DDS - skipping '${PROJECT_NAME}'")
@@ -43,31 +49,17 @@ target_link_libraries(free_fleet
   crypto
 )
 
-# -----------------------------------------------------------------------------
-
-set(testing_targets
-  test_dds_pub_destination_request
-  test_dds_pub_mode_request
-  test_dds_pub_path_request
-  test_dds_pub_sim_path_request
-  test_dds_sub_state
-)
-
-foreach(target ${testing_targets})
-  add_executable(${target}
-    src/tests/${target}.cpp
-    src/dds_utils/common.cpp
-    src/messages/FleetMessages.c
-  )
-  target_link_libraries(${target}
-    CycloneDDS::ddsc
-    ssl
-    crypto
-  )
-endforeach()
+ament_export_interfaces(free_fleet HAS_LIBRARY_TARGET)
+ament_export_dependencies(CycloneDDS)
 
 install(
-  TARGETS ${testing_targets}
+  DIRECTORY include/free_fleet
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+install(
+  TARGETS free_fleet
+  EXPORT  free_fleet
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
