Rebase with newest dev
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,4 +43,5 @@ jobs:
           --cmake-args -DCMAKE_BUILD_TYPE=RELEASE \
           --packages-up-to \
           free_fleet \
-          free_fleet_server
+          free_fleet_server \
+          free_fleet_examples
