--- a/free_fleet_server/package.xml
+++ b/free_fleet_server/package.xml
@@ -7,6 +7,8 @@
   <maintainer email="mquigley@openrobotics.org">Morgan Quigley</maintainer>
   <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
   <license>Apache License 2.0</license>
+  <author email="morgan@openrobotics.org">Morgan Quigley</author>
+  <author email="aaron@openrobotics.org">Aaron Chong</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
