adding free_fleet_rolling dependency
Signed-off-by: Marco A. Gutierrez <marco@openrobotics.org>

--- a/free_fleet_client/package.xml
+++ b/free_fleet_client/package.xml
@@ -19,5 +19,5 @@
   <depend>actionlib</depend>
   <depend>move_base_msgs</depend>
 
-  <depend>free_fleet</depend>
+  <depend>free_fleet_rolling</depend>
 </package>
