--- a/free_fleet_server/package.xml
+++ b/free_fleet_server/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>free_fleet_server</name>
-  <version>1.2.0</version>
+  <version>1.9999.0</version>
   <description>Free Fleet server ROS 2 wrapper</description>
   <maintainer email="mquigley@openrobotics.org">Morgan Quigley</maintainer>
   <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
@@ -14,13 +14,13 @@
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
   <build_depend>builtin_interfaces</build_depend>
   
-  <depend>rclcpp</depend>
-  <depend>rmf_fleet_msgs</depend>
+  <depend>rclcpp_rolling</depend>
+  <depend>rmf_fleet_msgs_roling</depend>
   <depend>free_fleet</depend>
   
-  <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_lint_common_rolling</test_depend>
 
-  <member_of_group>rosidl_interface_packages</member_of_group>
+  <member_of_group>rosidl_interface_packages_rolling</member_of_group>
 
   <export>
     <build_type>ament_cmake</build_type>
