--- a/free_fleet_server/package.xml
+++ b/free_fleet_server/package.xml
@@ -15,7 +15,7 @@
   <build_depend>builtin_interfaces</build_depend>
   
   <depend>rclcpp_rolling</depend>
-  <depend>rmf_fleet_msgs_roling</depend>
+  <depend>rmf_fleet_msgs_rolling</depend>
   <depend>free_fleet</depend>
   
   <test_depend>ament_lint_common_rolling</test_depend>
