Fixed docs to point to specific commit of robot_state_publisher, updated exec_dependencies to plugins
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/ff_examples_ros1/package.xml
+++ b/ff_examples_ros1/package.xml
@@ -9,6 +9,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <exec_depend>ff_rviz_plugins_ros1</exec_depend>
   <exec_depend>free_fleet_client_ros1</exec_depend>
 
   <exec_depend>turtlebot3_bringup</exec_depend>
