--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,7 +66,7 @@ jobs:
         mkdir -p ros2_ws/src
         cd ros2_ws/src
         git clone https://github.com/osrf/free_fleet
-        git clone https://github.com/osrf/rmf_core
+        git clone https://github.com/open-rmf/rmf_internal_msgs
     - name: checkout
       uses: actions/checkout@v2
       with:
